Install d3 and eslint

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "clean:build": "rimraf build",
     "build:html": "node ./bin/buildHtml.js",
     "prestart": "npm run clean:build",
-    "start": "webpack-dashboard -c cyan -- node dev-server.js",
+    "start": "webpack-dashboard -c magenta -- node dev-server.js",
     "prebuild": "npm run clean:build",
     "build": "cross-env NODE_ENV=production webpack --config ./config/webpack.config.production.js --progress",
     "postbuild": "npm run build:html",
@@ -61,7 +61,11 @@
     "cross-env": "2.0.1",
     "css-loader": "0.24.0",
     "eslint": "3.4.0",
+    "eslint-config-actano": "6.1.0",
+    "eslint-module-utils": "2.0.0",
     "eslint-plugin-flowtype": "2.11.4",
+    "eslint-plugin-import": "2.3.0",
+    "eslint-plugin-jsx-a11y": "5.0.3",
     "eslint-plugin-react": "6.2.0",
     "extract-text-webpack-plugin": "2.0.0-beta.3",
     "file-loader": "0.9.0",
@@ -94,6 +98,7 @@
     "autoprefixer": "6.4.1",
     "babel-runtime": "6.11.6",
     "classnames": "2.2.5",
+    "d3": "4.9.1",
     "express": "4.14.0",
     "lodash": "4.15.0",
     "raven-js": "3.6.1",
